@@ -1,3 +1,9 @@
+CVS
+===
+
+* Appender threshold can now be configured through the PropertyConfigurator and
+  the DOMConfigurator.
+
 Version 0.9.7 (2004-05-10)
 ==========================
 
